k8s/keycloak/keycloak.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: iam
spec:
  selector:
    app: keycloak
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: keycloak
  namespace: iam
spec:
  hosts:
    - keycloak.localhost
  gateways:
    - istio-system/poc-gateway
  http:
    - route:
        - destination:
            host: keycloak.iam.svc.cluster.local
            port:
              number: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: iam
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keycloak
          image: quay.io/keycloak/keycloak:26.7.3
          args:
            - start
            - --import-realm
            - --http-enabled=true
            - --hostname=http://keycloak.localhost:8080
            - --hostname-backchannel-dynamic=true
            - --proxy-headers=xforwarded
            - --health-enabled=true
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /realms/master
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 5
            failureThreshold: 24
          volumeMounts:
            - name: realm
              mountPath: /opt/keycloak/data/import
      volumes:
        - name: realm
          configMap:
            name: keycloak-realm
